# WindTurbine-Generator-predictive-maintenance

./: .readthedocs.yaml  2024.csv  2025updated.csv  LSTMGuiApp  README.md  best_model.h5  my_lstm_model.h5  pyproject.toml  signal_data1.csv
Dashboard_App/: __init__.py  app.py
app/: __init__.py  data_loader.py
docs/: api.rst  app.rst  conf.py  index.rst  installation.rst  modetestingl.rst  modules.rst  preprocessing.rst  preprocessing_custom.rst  requirements.txt  timeforecasting.rst
docs/_build/doctrees/: app.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  preprocessing.doctree  timeforecasting.doctree  usage.doctree
forecast/: utils.py
my_lstm_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
my_lstm_model/variables/: variables.data-00000-of-00001  variables.index
