[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windturbine-generator-predictive-maintenance"
version = "0.1.0"
description = "Wind Turbine Generator Predictive Maintenance Project"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "streamlit",
    "plotly",
    # Add other dependencies your project needs
]

[tool.setuptools]
packages = ["app", "forecast", "Dashboard_App"]

[tool.setuptools]
packages = ["app"]  # Remove "forecast" if it doesn't exist 